examples/pos/unused_effects.effekt
module examples/pos/unused_effects

effect Fail(): Unit

def main() = try {
  4
} with {
  case Fail() => 0
}