examples/neg/must_box_capability.effekt
module must_box_capability

effect exc(): Nothing
def foo() = try {
  e
} with e: exc { <> }